<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_180sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/app_permission" />

        <TextView
            style="@style/ListItemTitleStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/allow_permission_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <TextView
            style="@style/ListItemSubTitleStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center"
            android:text="@string/allow_permission"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnAllow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/bg_round_corner_color_primary"
        android:gravity="center"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/action_allow"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />
</RelativeLayout>
